레이블 수정

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Pocket Billiards</title>
+	<title>Three-cushion Billiards</title>
 	<script src="//0101010101.com/common/jquery2.js"></script>
 	<script src="run.js"></script>
 	<link rel="stylesheet" href="//0101010101.com/common/bootstrap-3.3.5/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h4 class="modal-title" id="myModalLabel">Set player count</h4>
+				<h4 class="modal-title" id="myModalLabel">Set player count (1 - 4)</h4>
 			</div>
 			<div class="modal-body">
 				<input type="number" value="2" min="1" max="4" class="form-control" id="pcount">
